/**
 * 数据分析平台提供给业务系统的报警分析设置API接口定义。业务平台可以通过API接口实现以下的功能：
 *
 * 1、更新或新增报警分析条件，包括：目标设备、分析参数、告警参数等。
 *
 * 2、删除报警分析条件。
 */

syntax = "proto3";

package com.chargerlink.gateway.analyser;

import "common.proto";

/** 报警分析设置API的接口定义。*/
service RulesService {
    /**
     * 更新或新增报警分析条件。
     *
     * 成功：返回操作成功的请求结果。
     *
     * 失败：返回操作失败的请求结果或gRPC错误。
     */
    rpc SetAlarmRule(AlarmRule) returns (Result);

    /**
     * 删除报警分析条件。
     *
     * 成功：返回操作成功的请求结果。
     *
     * 失败：返回操作失败的请求结果或gRPC错误。
     */
    rpc RemoveAlarmRule(AlarmRule) returns (Result);
}

/** 报表分析条件的消息定义。*/
message AlarmRule {
    uint32             rule_id      = 1;                    /// (必填)报表分析条件的ID。报表分析条件ID必须是全局唯一的。如果数据分析平台存在此ID的条件，则为更新；否则为新增。
    int32              alarm_code   = 2;                    /// (更新或新增时必填)报警代码。数据来源为报警代码字典表。
    int32              alarm_source = 3;                    /// (更新或新增时必填)报警来源。数据来源为报警代码字典表。
    DeviceType         device_type  = 4;                    /// (可选)分析的目标设备的设备类型。null：全部设备类型。
    repeated string    device_ids   = 5;                    /// (可选)分析的目标设备的设备ID列表。空列表：全部设备ID。
    map<uint32, Value> configs      = 6;                    /// (可选)全局报表分析条件参数。格式为：参数ID->参数值。
    repeated Condition conditions   = 7;                    /// (必填)按报警级别的报表分析条件参数列表。
}

/** 按报警级别的报表分析条件的消息定义。*/
message Condition {
    AlarmParameter      alarm_param = 1;                    /// (必填)报警通知定义。数据分析平台产生报警后，需包含此参数。
    uint32              alarm_level = 2;                    /// (必填)报警级别。
    uint32              start_time  = 3;                    /// (必填)分析开始时间。单位：1分钟，范围：0分钟～1440分钟。例如，420表示早上7:00。
    uint32              stop_time   = 4;                    /// (必填)分析结束时间。单位：1分钟，范围：0分钟～1440分钟。例如，420表示早上7:00。
    oneof               observe {                           /// (必填)分析持续条件。可选类型如下：
        int32           duration    = 5;                    ///       满足报警条件后持续时间。单位：分钟，范围：0分钟～1440分钟。
        int32           count       = 6;                    ///       满足报警条件后持续次数。单位：次数。
    }
    Logical             logical     = 7;                    /// (必填)分析参数的逻辑关系。
    repeated Expression expressions = 8;                    /// (必填)分析参数的列表。

    /** 分析参数的消息定义。*/
    message Expression {
        Operator operator = 1;                              ///
        Value    value    = 2;
    }

    /** 逻辑操作的常量定义。*/
    enum Logical {
        AND = 0;                                            /// 与逻辑操作。
        OR  = 1;                                            /// 或逻辑操作。
    }

    /** 条件操作的常量定义。*/
    enum Operator {
        EQ = 0;                                             /// 条件等于操作。
        GT = 1;                                             /// 条件大于操作。
        LT = 2;                                             /// 条件小于操作。
    }
}

